Product Not Fixed 01

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,36 +1,58 @@
-<p>product works!</p>
 
 <!-- Mahdi's Code -->
 
 <!-- Product -->
+<div class="d-flex position-relative">
+  <div class="Absul Address">
+    <p class="opacity">صفحه اصلی / محصولات / لوازم خانگی / یخچال</p>
+  </div>
+</div>
 
-<div class="">
+<div class="d-flex flex-row-reverse position-relative my-5">
 
-  <section class="container border">
+  <div class="Absul">
+    <button class="d-flex btn btn-primary justify-content-center align-items-center Bluebtn">
+      <img class="whiteBtn" src="../../../assets/img/w-heart.png"  alt="">
+    </button>
+    <button class="d-flex btn btn-primary  justify-content-center align-items-center Bluebtn my-2">
+      <img class="whiteBtn" src="../../../assets/img/w-bell-ring.png"  alt="">
+    </button>
+    <button class="d-flex btn btn-primary  justify-content-center align-items-center Bluebtn my-2">
+      <img class="whiteBtn" src="../../../assets/img/w-shield-check.png"  alt="">
+    </button>
+    <button class="d-flex btn btn-primary  justify-content-center align-items-center Bluebtn">
+      <img class="whiteBtn" src="../../../assets/img/w-comment.png"  alt="">
+    </button>
+  </div>
+  <section class="container border p-3 BorderR">
 
-    <div>
-      <!-- Product img -->
-      <div class="d-flex col-6 mt-3 position-relative" dir="rtl">
-        <div class="d-flex">
-          <img src="../../../assets/img/pngwing.com (7).png" width="400px" height="100%" alt="">
+    <div class="d-flex col-12  flex-row-reverse">
+
+      <div class="d-flex justify-content-center align-items-center col-6">
+        <!-- Product img -->
+      <div class="d-flex justify-content-center flex-column mx-4" dir="rtl">
+        <div class="">
+          <img src="../../../assets/img/pngwing.com (7).png" width="300px" height="100%" alt="">
         </div>
 
-        <div>
+        <div class="d-flex justify-content-between align-items-center" style="margin-top: 120px;">
           <div>
-
+            <img class="border rounded mx-2" src="../../../assets/img/1.jpg" width="80px" height="80px" alt="">
           </div>
 
           <div>
-
+            <img class="border rounded mx-2" src="../../../assets/img/1.jpg" width="80px" height="80px" alt="">
           </div>
 
           <div>
-
+            <img class="border rounded mx-2" src="../../../assets/img/1.jpg" width="80px" height="80px" alt="">
           </div>
         </div>
       </div>
+      </div>
+
       <!-- Price -->
-      <div class="col-6 mt-3" dir="rtl">
+      <div class="d-flex flex-column col-6 mt-3" dir="rtl">
         <div>
           <h4 class="FontWeight"> Herman فریزر برند </h4>
         </div>
@@ -135,41 +157,35 @@
 
         <div class="d-flex">
 
-           <div class="d-flex align-items-center">
-             <h6> تعداد </h6>
-           </div>
 
-           <div class="mx-3">
-              <div class="CountDiv">
+           <div class="d-flex justify-content-center mx-2">
 
-                <div class="d-flex align-items-center">
-                  <p>1</p>
-                </div>
-
-                <div class="d-flex align-items-center ArrowCount">
-                  <img class="" src="../../../assets/img/right.png" width="12px" height="100%" alt="">
-                </div>
-
-              </div>
+             <select class="form-select" aria-label="Default select example">
+              <option selected>تعداد</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+            </select>
            </div>
 
            <div>
-              <div class="Sellbtn overflow-hidden">
-                <div class="d-flex align-items-center justify-content-flex-start">
-                  <div class="Cartbtn">
-                    <div class="d-flex justify-content-center align-items-center">
-                      <img class="d-flex align-items-center" src="../../../assets/img/White_Cart.png" width="20px" height="20px" alt="">
-                    </div>
 
-                    <div class="d-flex justify-content-center">
-                      <h5 class="WhiteColor">افزودن به سبد خرید</h5>
-                    </div>
+              <button class="d-flex btn btn-primary-gold position-relative my-3 px-4 ">
 
+                  <div class="" style="margin-right: 50px;">
+                    <p>افزودن به سبد خرید</p>
                   </div>
-              </div>
+
+                  <span class="Cartbtn">
+
+                  </span>
+
+                  <img class="d-flex align-items-center Pic" src="../../../assets/img/White_Cart.png" width="20px" height="20px" alt="">
 
 
-              </div>
+
+
+              </button>
            </div>
 
         </div>
