--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -28,7 +28,19 @@
 
     <div class="d-flex col-12  flex-row-reverse">
 
-      <div class="d-flex justify-content-center align-items-center col-6">
+      <div class="d-flex justify-content-center align-items-center col-6 position-relative">
+
+        <div class="d-flex justify-content-between">
+          <span class="next-pre shadow LeftArrow">
+            <img src="../../../assets/img/left.png" width="20px" height="20px">
+          </span>
+
+          <span class="next-pre shadow RightArrow">
+            <img src="../../../assets/img/right.png" width="20px" height="20px">
+          </span>
+
+
+        </div>
         <!-- Product img -->
       <div class="d-flex justify-content-center flex-column mx-4" dir="rtl">
         <div class="">
@@ -160,27 +172,27 @@
 
            <div class="d-flex justify-content-center mx-2">
 
-             <select class="form-select" aria-label="Default select example">
+             <select class="form-select" style="height: 61px; margin-top: 15px;" aria-label="Default select example">
               <option selected>تعداد</option>
+              <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
-              <option value="4">4</option>
             </select>
            </div>
 
            <div>
 
-              <button class="d-flex btn btn-primary-gold position-relative my-3 px-4 ">
+              <button class="d-flex btn btn-primary-gold position-relative my-3 px-4" style="border: none;">
 
-                  <div class="" style="margin-right: 50px;">
+                  <div class="" style="margin-right: 50px; margin-top: 7px;">
                     <p>افزودن به سبد خرید</p>
                   </div>
 
-                  <span class="Cartbtn">
+                  <span class="Cartbtn" style="margin-top: 5px;">
 
                   </span>
 
-                  <img class="d-flex align-items-center Pic" src="../../../assets/img/White_Cart.png" width="20px" height="20px" alt="">
+                  <img style="margin-top: 5px;" class="d-flex align-items-center Pic" src="../../../assets/img/White_Cart.png" width="20px" height="20px" alt="">
 
 
 
@@ -214,8 +226,12 @@
 
     </div>
 
+
+
+    <div class="d-flex align-items-center mt-5 position-relative">
+
       <div class="d-flex justify-content-flex-start">
-        <span class="d-flex next-pre shadow LeftArrow">
+        <span class="next-pre shadow LeftArrow">
           <img src="../../../assets/img/left.png" width="20px" height="20px">
         </span>
 
@@ -226,8 +242,6 @@
 
       </div>
 
-
-    <div class="d-flex align-items-center mt-5">
 
       <div class="col-2">
         <img src="../../../assets/img/kisspng-computer-keyboard-computer-mouse-logitech-gaming-k-keyboard-decoration-design-vector-5a934232ebbc69.9508068215196001789656.png" width="130px" height="100%" alt="">
@@ -322,8 +336,8 @@
       <h5 class="FontWeight">
         مشخصات
       </h5>
-      <div class="d-flex justify-content-flex-start position-relative mt-3">
-        <span class="HRBlue01"></span>
+      <div class="justify-content-between position-relative">
+        <span class="HRBlue01 d-flex" style="margin-left: 100px; margin-top: 10px;"></span>
       </div>
     </div>
 
