--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -16,29 +16,6 @@
 
 </div>
 
-<!-- <div class="container">
-  <div class="row align-items-center">
-    <div>
-      <h3 class="col-4 mt-5 font-black">درباره ما</h3>
-    </div>
-
-    <div class="Mainpic col-8">
-      <img src="assets/group-people-working-out-business-plan-office.jpg" alt="">
-    </div>
-
-    <div  class="col-4 font-black">
-      <p> تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</p>
-    </div>
-
-    <div class="col-6 mx-4 d-flex justify-content-center">
-      <button class="btn btn-secondary-blue mx-3"> بازگشت </button>
-
-      <button class="btn btn-secondary-blue"> بیشتر </button>
-
-    </div>
-  </div>
-
-</div> -->
 <section class="container mt-4">
   <div>
 
@@ -58,7 +35,7 @@
               <button class="btn btn-primary"> بیشتر </button>
             </div>
             <div class="mx-4">
-              <button class="btn btn-black"> بازگشت </button>
+              <button class="btn btn-secondary-red" (click)="back()"> بازگشت </button>
             </div>
 
 
