--- a/src/app/pages/comments/comments.component.html
+++ b/src/app/pages/comments/comments.component.html
@@ -46,19 +46,15 @@
 
         <div class="d-flex justify-content-between">
           <div class="d-flex">
-            <button class="d-flex justify-content-center btn btn-primary p-3 BtnCom">
-                <div class="d-flex justify-content-center align-items-center">
+            <button class="d-flex justify-content-center align-items-center btn btn-primary p-3 BtnCom">
                   ثبت نظر
-                </div>
             </button>
 
           </div>
 
           <div class="d-flex mx-3">
-            <button class="d-flex justify-content-center align-items-center btn btn-black BtnCom p-3">
-                <div class="d-flex justify-content-center align-items-center p-2">
-                  بازگشت
-                </div>
+            <button class="d-flex justify-content-center align-items-center btn btn-secondary-red BtnCom p-3">
+                بازگشت
             </button>
 
           </div>
