--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -66,7 +66,7 @@
             </div>
 
               <div class="mx-4">
-                <button class="btn btn-black"> بازگشت </button>
+                <button class="btn btn-secondary-red" (click)="back()"> بازگشت </button>
               </div>
 
 
