--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<app-header></app-header>
-<app-comments></app-comments>
-<!-- <app-footer></app-footer> -->
-<!-- <app-contact></app-contact> -->
-<app-about></app-about>
-<app-cart></app-cart>
+<router-outlet></router-outlet>
