--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -43,8 +43,8 @@
         </div>
         
         <div class="buten d-flex justify-content-around col-2 ">
-            <button class=" btn btn-secondary-red mx-3">بازگشت</button>
             <button class="btn btn-primary" (click)="product()">ادامه</button>
+            <button class=" btn btn-secondary-red mx-3" (click)="back()">بازگشت</button>
         </div>
     </div>
 </div>
