--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -5,9 +5,9 @@
         <div class="d-flex flex-column align-items-end">
             <h3 class="display-6 mx-5 mb-4">دسته بندی ها</h3>
             <div class="d-flex justify-content-end" style="width: 1000px;">
-                <app-card2 class="mx-4"></app-card2>
-                <app-card2 class="mx-4"></app-card2>
-                <app-card2 class="mx-4"></app-card2>
+                <app-card2 class="mx-4" [routerLink]="['/product']"></app-card2>
+                <app-card2 class="mx-4" [routerLink]="['/product']"></app-card2>
+                <app-card2 class="mx-4" [routerLink]="['/product']"></app-card2>
             </div>
         </div>
     </div>
@@ -38,13 +38,15 @@
 
     <div class="d-flex justify-content-between align-items-start flex-wrap">
     
-        <app-card1 [discount]="true" class="mb-5"></app-card1>
-        <app-card1></app-card1>
-        <app-card1 [new]="true"></app-card1>
-        <app-card1></app-card1>
-        <app-card1 [hot]="true" [title]="'مبین'"></app-card1>
-        <app-card1></app-card1>
+        <app-card1 [discount]="true" class="mb-5" [routerLink]="['/product']"></app-card1>
+        <app-card1 [routerLink]="['/product']"></app-card1>
+        <app-card1 [new]="true" [routerLink]="['/product']"></app-card1>
+        <app-card1 [routerLink]="['/product']"></app-card1>
+        <app-card1 [hot]="true" [title]="'مبین'" [routerLink]="['/product']"></app-card1>
+        <app-card1 [routerLink]="['/product']"></app-card1>
     </div>
 </div>
+
+<app-go-up></app-go-up>
 
 <app-footer></app-footer>
