--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -671,6 +671,6 @@
   </div>
 </section>
 
-<span class="alert alert-success" style="position: sticky; bottom: 50px; left: 40%;" [hidden]="successfulAdded">به سبد خرید افزوده شد! <a [routerLink]="['/cart']">مشاهده سبد خرید</a></span>
+<span class="alert alert-success" style="position: sticky; bottom: 50px; left: 40%; z-index: 99;" [hidden]="successfulAdded">به سبد خرید افزوده شد! <a [routerLink]="['/cart']">مشاهده سبد خرید</a></span>
 <app-go-up></app-go-up>
 <app-footer></app-footer>
